--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/seanhealy/modules-what-do#readme",
   "dependencies": {
     "chalk": "^2.3.2",
+    "inquirer": "^5.2.0",
     "ts-node": "^5.0.1",
     "typescript": "^2.8.1"
   }
