--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "start": "ts-node src/main.js",
+    "file": "ts-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
